feat-v2: fixing base logic
